# hopper

./: CLAUDE.md  Cargo.toml  Dockerfile  build.rs
documentation/: SPEC.md
etc/: webfinger.json
src/: errors.rs  lib.rs  model.rs  webhostmeta.rs
src/http/: context.rs  handle_index.rs  handle_policy.rs  handle_spec.rs  mod.rs  server.rs  templates.rs
templates/: alert.bare.html  alert.html  alert.partial.html  base.html  footer.html  index.html  index.partial.html  policy.html  spec.html
